Fix mobile menu overflow

--- a/docs/_sass/components/_doc.scss
+++ b/docs/_sass/components/_doc.scss
@@ -143,5 +143,9 @@
 @include bp(medium) {
     #site-doc {
         left: 0;
+
+        &.expanded {
+          overflow: hidden;
+        }
     }
 }
