--- a/docs/_sass/components/_sidebar.scss
+++ b/docs/_sass/components/_sidebar.scss
@@ -71,6 +71,7 @@
 
         &.toggled {
             left: 0;
+            overflow-y: auto;
         }
 
         .sidebar-toggle {
